--- a/AntiSurfaceCamping.csproj
+++ b/AntiSurfaceCamping.csproj
@@ -10,4 +10,16 @@
     <PackageReference Include="EXILED" Version="8.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Exiled.API">
+      <HintPath>..\..\..\..\Downloads\Exiled.API.dll</HintPath>
+    </Reference>
+    <Reference Include="Exiled.Events">
+      <HintPath>..\..\..\..\Downloads\Exiled.Events.dll</HintPath>
+    </Reference>
+    <Reference Include="Exiled.Loader">
+      <HintPath>..\..\..\..\Downloads\Exiled.Loader.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
