--- a/AntiSurfaceCamping.csproj
+++ b/AntiSurfaceCamping.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EXILED" Version="8.2.0" />
+    <PackageReference Include="EXILED" Version="8.2.1" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
